<resources>
    <string name="app_name">CakeOderingApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="existing_account">Already have an account?</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="full_name">Full Name</string>
    <string name="fullname_missing">Please, enter full name</string>
    <string name="email_missing">Please, enter email</string>
    <string name="password_missing">Please, enter password</string>
    <string name="signing_up">Signing Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
