<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andela.cakeoderingapp.activities.SignInActivity">


    <ImageView
    android:layout_width="128dp"
    android:layout_height="128dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="80dp"
    android:src="@drawable/cake" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputStyle"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:textColor="@color/whiteColor"
            android:textColorHint="#7fffffff"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"/>


    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintTextAppearance="@style/TextInputStyle">

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColor="@color/whiteColor"
                android:textColorHint="#7fffffff"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />


        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textStyle="bold"
        android:textColor="@color/backgroundColor"/>

</LinearLayout>
